Version 8.8.2

- Fixed issues with Sensitivity Analysis (Classic UI)
- Set default System of Units  (Classic UI) 
- Tentative fix for Excel.exe not closing in Spreadsheet UO after calculation
- Fixed memory leaks
- Optimized memory consumption and CPU usage
- Fixed issue with Heat Exchanger UO
- Other fixes and enhancements